--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,3 +27,12 @@ langsmith==0.3.13
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydantic-settings==2.6.1
+sentence-transformers>=2.2.2
+chromadb>=0.4.22
+rank_bm25>=0.2.2
+nltk>=3.8.1
+transformers>=4.36.2
+litellm>=1.16.11
+numpy>=1.24.3
+scikit-learn>=1.3.2
+openai>=1.3.7
